2013-07-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed the default value for
	"prediction_module" in tagente_module.
	
	MERGED FROM THE TRUNK.

2013-07-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/pChart/pPie.class.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Add support to colors
	in pie graphs and fix important bug in static graphs library.
	All of them to fix new console mobile pie graph in agent view

2013-07-09  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_view.php: Do not retrieve all traps to
	  get a list of sources.

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php: fixed the float
	values for min and max critical and warning.
	
	Fixes: #2316

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/modules.php, mobile/include/style/main.css:
	yes another fixes.

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/alerts.php, mobile/operation/events.php,
	mobile/operation/modules.php, mobile/operation/networkmaps.php,
	mobile/operation/agents.php, mobile/include/ui.class.php,
	mobile/include/style/main.css: some fixes.

2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php: into the function
	"events_get_events_grouped" fixed the get total of events as
	pandora5.
	
	* operation/events/events_list.php: cleaned source code style.
	
	* mobile/operation/events.php: some fixes in the pagination, and
	now the events from the system show the name "system".

2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/include/style/main.css: some
	fixes.

2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/alerts/alert_list.builder.php: Small changes. Make
	alert action list sorted (in the same order of extra action