@@ -34,6 +34,16 @@
 function forecast_projection_graph($module_id, $period = 5184000, $prediction_period, $max_value = false, $min_value = false, $csv = false){
 	global $config;
 
+	$max_exec_time = ini_get('max_execution_time'); 
+
+	if ($max_exec_time !== false) {
+
+		$max_exec_time = (int)$max_exec_time; 
+
+	}
+
+	$begin_time = time();
+
 	$module_data=grafico_modulo_sparse ($module_id, $period, 0,
 				300, 300 , '', null,
 				false, 0, false,
@@ -46,8 +56,8 @@ function forecast_projection_graph($module_id, $period = 5184000, $prediction_pe
 	// Prevents bad behaviour over image error 
 	else if (!is_array($module_data) and preg_match('/^<img(.)*$/', $module_data)) {
 		return;
-	}		
-			
+	}
+	
 	// Data initialization
 	$sum_obs = 0;
 	$sum_xi = 0;
@@ -55,14 +65,14 @@ function forecast_projection_graph($module_id, $period = 5184000, $prediction_pe
 	$sum_xi_yi = 0;
 	$sum_xi2 = 0;
 	$sum_yi2 = 0;
-	$sum_diff_dates = 0;	
+	$sum_diff_dates = 0;
 	$last_timestamp = get_system_time();
 	$agent_interval = 300;
 	$cont = 1;
 	$data = array();
-	//$table->data = array();	
+	//$table->data = array();
 
-	// Creates data for calculation		
+	// Creates data for calculation
 	foreach ($module_data as $utimestamp => $row) {
 		if ($utimestamp == '') {
 			continue;
@@ -76,12 +86,12 @@ function forecast_projection_graph($module_id, $period = 5184000, $prediction_pe
 		$data[5] = $utimestamp * $row['sum'];
 		$data[6] = $utimestamp * $utimestamp;
 		$data[7] = $row['sum'] * $row['sum'];
-		if ($cont == 1){
+		if ($cont == 1) {
 			$data[8] = 0;
 		}
-		else {	
+		else {
 			$data[8] = $utimestamp - $last_timestamp;
-		}		
+		}
 		
 		$sum_obs = $sum_obs + $cont;
 		$sum_xi = $sum_xi + $utimestamp;
@@ -89,13 +99,11 @@ function forecast_projection_graph($module_id, $period = 5184000, $prediction_pe
 		$sum_xi_yi = $sum_xi_yi + $data[5];
 		$sum_xi2 = $sum_xi2 + $data[6];
 		$sum_yi2 = $sum_yi2 + $data[7];
-		$sum_diff_dates = $sum_diff_dates + $data[8];		
+		$sum_diff_dates = $sum_diff_dates + $data[8];
 		$last_timestamp = $utimestamp;	
 		$cont++;
-		
-		//array_push($table->data, $data);												
-	}		
-
+	}
+	
 	$cont--;
 	
 	// Calculation over data above:
@@ -117,8 +125,8 @@ function forecast_projection_graph($module_id, $period = 5184000, $prediction_pe
 	$dev_x = sqrt(($sum_xi2/$cont) - ($avg_x*$avg_x));
 	$dev_y = sqrt(($sum_yi2/$cont) - ($avg_y*$avg_y));
 	// Prevents division by zero
-	if ($dev_x != 0 and $dev_y != 0){
-		$linear_coef = $covariance / ($dev_x * $dev_y);	 
+	if ($dev_x != 0 and $dev_y != 0) {
+		$linear_coef = $covariance / ($dev_x * $dev_y);
 	}
 	// Agent interval could be zero, 300 is the predefined
 	($sum_obs == 0)? $agent_interval = 300 : $agent_interval =  $sum_diff_dates / $sum_obs; 			
@@ -183,6 +191,15 @@ function forecast_projection_graph($module_id, $period = 5184000, $prediction_pe
 	$idx = 0;
 	// Create data in graph format like
 	while ($in_range){	
+		$now = time();
+
+		//  Check that exec time is not greater than half max exec server time
+		if ($max_exec_time !== false) {
+			if (($begin_time + ($max_exec_time/2)) < $now) {
+				return false;
+			}
+		}
+
 		$timestamp_f = date($time_format, $current_ts);
 
 		//$timestamp_f = date($time_format, $current_ts);
