@@ -1,3 +1,8 @@
+2013-07-24 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>
+
+        * include/functions_forecast.php: Avoid timeout in prediction date
+        item report. Merged bugfix from trunk.
+
 2013-07-17 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/configurar_agente.php: fixed the default value for
